# vars-gridview

./: .env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  build_macos.sh  environment.yml  gridview.py  gridview.ui  pyproject.toml  requirements.txt  run.spec
.github/workflows/: ci.yml
config/: base_query.sql  settings.py  sources.ini
libs/: annotation.py  boxes.py  image_mosaic.py  logger.py  vars.py  widgets.py
src/vars_gridview/: __init__.py  __main__.py
src/vars_gridview/assets/: gridview.ui
src/vars_gridview/controllers/: __init__.py  annotation_controller.py  query_controller.py  selection_model.py  session_controller.py
src/vars_gridview/lib/: __init__.py  annotation.py  association.py  box_handler.py  boxes.py  cache.py  constants.py  embedding.py  image_mosaic.py  log.py  observation.py  raziel.py  runnables.py  settings.py  sort_methods.py  sql.py  util.py  utils.py
src/vars_gridview/lib/annotation/: __init__.py  association.py  box_handler.py
src/vars_gridview/lib/auth/: __init__.py  raziel.py
src/vars_gridview/lib/common/: __init__.py  filesystem.py  time.py  tsv.py
src/vars_gridview/lib/config/: __init__.py  constants.py  settings.py
src/vars_gridview/lib/m3/: __init__.py  clients.py  operations.py  query.py
src/vars_gridview/lib/runtime/: __init__.py  desktop_entry.py  log.py  runnables.py
src/vars_gridview/lib/sorting/: __init__.py  sort_methods.py
src/vars_gridview/lib/vision/: __init__.py  embedding.py  image_utils.py
src/vars_gridview/services/: __init__.py  annotation_service.py  knowledge_base_service.py  localization_loader.py  localization_store.py  mosaic_pipeline.py  roi_loader.py  roi_service.py
src/vars_gridview/ui/: BoundingBox.py  CentralWidget.py  ConceptSelectionDialog.py  ControlBar.py  ImageMosaic.py  InfoPanel.py  JSONTree.py  LoginDialog.py  MainWindow.py  MosaicView.py  QueryDialog.py  RectWidget.py  RoiGraphicsView.py  SortDialog.py  StatusInfoItem.py  StatusInfoWidget.py  style.py
src/vars_gridview/ui/coordinators/: __init__.py  annotation_action_coordinator.py  annotation_operation_presenter.py  detail_pane_coordinator.py  dirty_association_save_coordinator.py  embedding_lifecycle_coordinator.py  knowledge_base_ui_coordinator.py  login_session_coordinator.py  main_window_menu_coordinator.py  mosaic_embedding_coordinator.py  mosaic_load_coordinator.py  mosaic_roi_loading_coordinator.py  mosaic_selection_coordinator.py  mosaic_similarity_coordinator.py  mosaic_tile_action_coordinator.py  query_presentation_coordinator.py  query_progress_coordinator.py  query_results_coordinator.py  rect_interaction_coordinator.py  shutdown_save_coordinator.py  video_navigation_coordinator.py
src/vars_gridview/ui/dialogs/: __init__.py  concept_selection_dialog.py  confirmation_dialog.py  login_dialog.py  query_dialog.py  sort_dialog.py  staged_progress_dialog.py
src/vars_gridview/ui/layout/: __init__.py  main_window_layout.py
src/vars_gridview/ui/mosaic/: __init__.py  bounding_box.py  image_mosaic.py  (+3 more)
style/: breeze_resources.py
tests/: test_annotation_controller.py  test_annotation_service.py  test_controller_modal_policy.py  test_depth_range_result.py  test_desktop_entry.py  test_detail_pane_coordinator.py  test_image_mosaic_remove_rect_widgets.py  test_image_mosaic_row_parse.py  test_image_mosaic_stage_runner.py  test_knowledge_base_service.py  test_localization_store.py  test_login_session_coordinator.py  test_main_desktop_cli.py  test_main_window_selection_cleanup.py  test_mosaic_embedding_coordinator.py  test_mosaic_load_coordinator.py  test_mosaic_pipeline.py  test_mosaic_roi_loading_coordinator.py  test_mosaic_selection_coordinator.py  test_mosaic_similarity_coordinator.py  test_mosaic_tile_action_coordinator.py  test_mosaic_view_navigation.py  test_query_constraints.py  test_query_controller.py  test_query_presentation_coordinator.py  test_query_progress_coordinator.py  test_query_results_coordinator.py  test_roi_loader.py  test_roi_service.py  test_session_controller.py  test_shutdown_save_coordinator.py  test_sort_methods.py  test_util.py
vars_gridview/assets/: annotation_data_query.sql  base_query.sql  gridview.ui  video_data_query.sql
vars_gridview/assets/icons/: README.md  VARSGridView.icns
vars_gridview/lib/: annotation.py  boxes.py  cache.py  constants.py  embedding.py  entities.py  grid_view.py  image_mosaic.py  log.py  models.py  raziel.py  settings.py  sort_methods.py  sql.py  util.py  widgets.py
vars_gridview/lib/m3/: __init__.py  clients.py  operations.py
vars_gridview/scripts/: run.py
vars_gridview/ui/: ConfirmationDialog.py  LoginDialog.py  QueryDialog.py  SortDialog.py
vars_gridview/ui/settings/: SettingsDialog.py
(+24 files in other folders)
