[project]
name = "vars-gridview"
version = "0.30.5"
description = "VARS GridView is a tool for reviewing and correcting VARS localizations in bulk."
authors = [
    { name = "Kevin Barnard", email = "kbarnard@mbari.org" },
    { name = "Paul Roberts", email = "proberts@mbari.org" }
]
maintainers = [
    { name = "Kevin Barnard", email = "kbarnard@mbari.org" },
]
dependencies = [
    "pyqt6>=6.4.0",
    "requests>=2.27.1",
    "pyqtgraph>=0.13.0",
    "opencv-python>=4.5.5.62",
    "qdarkstyle>=3.0.3",
    "beholder-client>=0.3.1",
    "sharktopoda-client>=0.4.5",
    "platformdirs>=4.0.0",
    "iso8601>=2.1.0",
    "pydantic>=2.10.6",
    "cachetools>=5.5.1",
    "scipy>=1.13.1",
]
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "vars",
    "mbari",
    "oceanography",
    "video-annotation",
    "marine-biology",
    "localization",
    "annotation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Multimedia :: Video",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/mbari-org/vars-gridview"
Repository = "https://github.com/mbari-org/vars-gridview"
Issues = "https://github.com/mbari-org/vars-gridview/issues"

[project.scripts]
vars-gridview = "vars_gridview.__main__:main"

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
    "pyinstaller>=6.11.1",
    "pytest>=8.3.4",
    "ruff>=0.15.20",
    "ty>=0.0.56",
]
release = [
    "python-semantic-release>=10.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/vars_gridview"]

[tool.semantic_release]
assets = []
commit_message = "{version}\n\nAutomatically generated by python-semantic-release"
commit_parser = "conventional"
logging_use_named_masks = false
major_on_zero = true
allow_zero_version = true
tag_format = "v{version}"
version_toml = [
    "pyproject.toml:project.version",
]
version_variables = [
    "src/vars_gridview/__init__.py:__version__",
]

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.branches.develop]
match = "develop"
prerelease_token = "rc"
prerelease = true

[tool.semantic_release.changelog]
template_dir = "templates"
exclude_commit_patterns = []

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = true

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false

[tool.semantic_release.remote.token]
env = "GH_TOKEN"

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true
